[package]
name = "restaking"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
borsh = "1.5.1"
chrono = "0.4.38"
reqwest = { version = "0.12.8", features = ["json"] }
serde = "1.0.213"
serde_json = "1.0.132"
solana-client = "2.0.14"
solana-sdk = "2.0.14"
spl-associated-token-account = "5.0.1"
spl-token = "6.0.0"
znap = { git = "https://github.com/leandrogavidia/znap.git", branch = "advanced-input-types" }
